workloads/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  minReadySeconds: 5
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
      labels:
        app: frontend
    spec:
      containers:
        - name: podinfod
          image: AZCRCSCNPlatformAPNProd01.azurecr.io/podinfo:1.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9898
              name: http
              protocol: TCP
          command:
            - ./podinfo
            - --port=9898
            - --level=info
            - --random-delay=false
            - --random-error=false
            - --backend-url=http://backend:9898/echo
          livenessProbe:
              httpGet:
                path: /healthz
                port: 9898
              initialDelaySeconds: 5
              timeoutSeconds: 5
          readinessProbe:
              httpGet:
                path: /readyz
                port: 9898
              initialDelaySeconds: 5
              timeoutSeconds: 5
          resources:
            limits:
              cpu: 2000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 64Mi
