workloads/frontend/virtualServices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter
spec:
  gateways:
  - team1-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
      prefix: /web/team1
    route:
    - destination:
        host: frontend
        port:
          number: 9898
